@@ -203,8 +203,8 @@ _gnutls_handshake_sign_data (gnutls_session_t session, gnutls_cert * cert,
     case GNUTLS_PK_DSA:
       _gnutls_hash_deinit (&td_sha, concat);
 
-      if (hash_algo != GNUTLS_DIG_SHA1 && hash_algo != GNUTLS_DIG_SHA224 && \
-        hash_algo != hash_algo != GNUTLS_DIG_SHA256)
+      if ((hash_algo != GNUTLS_DIG_SHA1) && (hash_algo != GNUTLS_DIG_SHA224) && \
+        (hash_algo != GNUTLS_DIG_SHA256))
 	{
 	  gnutls_assert ();
 	  return GNUTLS_E_INTERNAL_ERROR;
