@@ -34,6 +34,8 @@
 #include <nettle/bignum.h>
 #include <random.h>
 
+#define TOMPZ(x) (*((mpz_t*)(x)))
+
 static int
 wrap_nettle_mpi_print(const bigint_t a, void *buffer, size_t * nbytes,
 		    gnutls_bigint_format_t format)
@@ -43,8 +45,13 @@ wrap_nettle_mpi_print(const bigint_t a, void *buffer, size_t * nbytes,
 
 	if (format == GNUTLS_MPI_FORMAT_USG) {
 		size =  nettle_mpz_sizeinbase_256_u(*p);
-	} else {
+	} else if (format == GNUTLS_MPI_FORMAT_STD) {
 		size =  nettle_mpz_sizeinbase_256_s(*p);
+	} else if (format == GNUTLS_MPI_FORMAT_PGP) {
+		size = nettle_mpz_sizeinbase_256_u(*p) + 2;
+	} else {
+		gnutls_assert();
+		return GNUTLS_E_INVALID_REQUEST;
 	}
 
 	if (buffer==NULL || size > *nbytes) {
@@ -52,7 +59,15 @@ wrap_nettle_mpi_print(const bigint_t a, void *buffer, size_t * nbytes,
 		return GNUTLS_E_SHORT_MEMORY_BUFFER;
 	}
 	
-	nettle_mpz_get_str_256(size, buffer, *p);
+	if (format == GNUTLS_MPI_FORMAT_PGP) {
+		opaque *buf = buffer;
+		unsigned int nbits = _gnutls_mpi_get_nbits(a);
+		buf[0] = (nbits >> 8) & 0xff;
+		buf[1] = (nbits) & 0xff;
+		nettle_mpz_get_str_256(size-2, buf+2, *p);
+	} else {
+		nettle_mpz_get_str_256(size, buffer, *p);
+	}
 	*nbytes=size;
 
 	return 0;
@@ -84,12 +99,36 @@ wrap_nettle_mpi_scan(const void *buffer, size_t nbytes,
 	}
 
 	if (format == GNUTLS_MPI_FORMAT_USG) {
-		nettle_mpz_set_str_256_u(*((mpz_t*)r), nbytes, buffer);
+		nettle_mpz_set_str_256_u(TOMPZ(r), nbytes, buffer);
+	} else if (format == GNUTLS_MPI_FORMAT_STD) {
+		nettle_mpz_set_str_256_s(TOMPZ(r), nbytes, buffer);
+	} else if (format == GNUTLS_MPI_FORMAT_PGP) {
+		const opaque *buf = buffer;
+		size_t size;
+		
+		if (nbytes < 3) {
+			gnutls_assert();
+			goto fail;
+		}
+
+		size = (buf[0] << 8) | buf[1];
+		size = (size+7) / 8;
+
+		if (size > nbytes-2) {
+			gnutls_assert();
+			goto fail;
+		}
+		nettle_mpz_set_str_256_u(TOMPZ(r), size, buf+2);
 	} else {
-		nettle_mpz_set_str_256_s(*((mpz_t*)r), nbytes, buffer);
+		gnutls_assert();
+		goto fail;
 	}
 	
 	return r;
+fail:
+	_gnutls_mpi_release(&r);
+	return NULL;
+
 }
 
 static int wrap_nettle_mpi_cmp(const bigint_t u, const bigint_t v)
